# passage-of-time-mcp-extended

./: .env.example  .gitignore  CLAUDE.md  README.md  passage_of_time_mcp.py  patch_mcp_register.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: guide-about.md  guide-configuration.md  guide-tool-reference.md  setup-cloudflare.md
src/passage_of_time/: app.py
tests/: test_e2e_streamable_http.py  test_passage_of_time_mcp.py
